--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,29 @@ body {
   width: 75%;
   margin: 2% auto;
 }
+.logo a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: 700;
+}
+.menu__list {
+  display: flex;
+}
+.menu__item {
+  padding: 15px;
+}
+.menu__item a {
+  text-decoration: none;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.menu__item a:hover {
+  border: 2px solid white;
+  padding: 5px;
+  border-radius: 5px;
+  transition: all 0.2s;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #004949;
+}
