--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,40 @@ body {
 .menu__item:hover .submenu {
   display: block;
 }
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: #004949;
+  padding: 2% 2%;
+  margin: 5% 15%;
+  line-height: 1.5em;
+  text-align: center;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 15px;
+  background-color: rgba(234, 246, 252, 0.7);
+}
+.main h2,
+img {
+  font-size: 2em;
+  margin: 2% auto;
+  font-weight: 700;
+}
+main img {
+  width: 50%;
+  border-radius: 15px;
+}
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-weight: 900;
+  background-color: #ffffff;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  z-index: 9999;
+}
